Accessibility issue (contrast) fixed for gallery page

--- a/events.css
+++ b/events.css
@@ -15,7 +15,7 @@ img {
 }
 
 .header-address-bar {
-  background-color: rgba(15, 41, 46, 0.654);
+  background-color: black;
   height: 30px;
   display: flex;
   align-items: center;
@@ -157,8 +157,8 @@ nav {
 
   font-family: tangerine, sans-serif;
   font-size: clamp(4.5rem, 9vw, 10rem);
-  text-shadow: -3px 3px 3px blue;
-  color: lightcyan;
+  /* text-shadow: -3px 3px 3px blue; */
+  color: blue;
 
   position: relative;
   animation: gallery-header-appear 2s both 200ms;
@@ -201,7 +201,6 @@ nav {
   align-items: center;
 
   border: 1px solid brown;
-  /* margin-bottom: 20px; */
   padding-bottom: 15px;
   width: 80%;
   height: 70%;
